# Executable-Analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
scripts/: build_linux_linux.sh  build_windows_windows.bat  buildrun_linux_linux.sh  buildrun_windows_windows.bat  configure_linux_linux.sh  configure_mac_mac.sh  configure_windows_windows.bat  imgui.ini
src/: ImGuiFileBrowser.cpp  foxui.cpp  foxui.h  main.cpp
